# ctrl-freeq

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  renovate.json5  sitemap.xml
.github/workflows/: auto-format.yml  cut.yml  docs.yml  python-tests.yml  release.yml  renovate.yml
api/: index.html
dashboard/: index.html
docs/: api.md  dashboard.md  gui.md  index.md  installation.md
docs/hooks/: changelog_copy.py
docs/optimization/: algorithms.md  compute.md  index.md  parameters.md
examples/: api_demo.ipynb  api_gpu_cpu_demo.ipynb  benchmark_complete_optimization.py  benchmark_simulator.py  profile_optimizer.py  qiskit_optimizer_demo.py
examples/benchmarks/: ctrlfreeq_vs_piecewise_benchmark.py
gui/: index.html
installation/: index.html
optimization/: index.html
optimization/algorithms/: index.html
optimization/compute/: index.html
optimization/parameters/: index.html
release-notes/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/dashboard/: index.html
site/gui/: index.html
site/installation/: index.html
site/optimization/: index.html
site/optimization/algorithms/: index.html
site/optimization/compute/: index.html
site/search/: search_index.json
src/ctrl_freeq/: __init__.py  api.py  cli.py
src/ctrl_freeq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_device.py  test_dissipation.py  test_exception_handling.py  test_fix_fou.py  test_gui_algorithms.py  test_hamiltonian_models.py  test_logging.py  test_logging_format.py  test_new_optimizers.py  test_notebook.py  test_notebook_based_api.py  test_optimizer_spaces.py  test_piecewise_implementation.py  test_piecewise_optimizers.py  test_qiskit_optimizers.py  test_qiskit_optimizers_comprehensive.py  test_simple_logging.py
(+38 files in other folders)
